# ESP32-S3-Multimodal-TinyML

./: README.md
src/: platformio.ini
src/include/: gesture.h  global.h  led_blinky.h  voice.h
src/lib/Gesture_ESP32S3_inferencing/: library.properties
src/lib/Gesture_ESP32S3_inferencing/examples/esp32/esp32_camera/: esp32_camera.ino
src/lib/Gesture_ESP32S3_inferencing/examples/esp32/esp32_fusion/: esp32_fusion.ino
src/lib/Gesture_ESP32S3_inferencing/examples/esp32/esp32_microphone/: esp32_microphone.ino
src/lib/Gesture_ESP32S3_inferencing/examples/esp32/esp32_microphone_continuous/: esp32_microphone_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense/nano_ble33_sense_accelerometer/: nano_ble33_sense_accelerometer.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense/nano_ble33_sense_accelerometer_continuous/: nano_ble33_sense_accelerometer_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense/nano_ble33_sense_camera/: nano_ble33_sense_camera.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense/nano_ble33_sense_fusion/: nano_ble33_sense_fusion.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense/nano_ble33_sense_microphone/: nano_ble33_sense_microphone.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense/nano_ble33_sense_microphone_continuous/: nano_ble33_sense_microphone_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense_rev2/nano_ble33_sense_rev2_accelerometer/: nano_ble33_sense_rev2_accelerometer.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense_rev2/nano_ble33_sense_rev2_accelerometer_continuous/: nano_ble33_sense_rev2_accelerometer_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nano_ble33_sense_rev2/nano_ble33_sense_rev2_fusion/: nano_ble33_sense_rev2_fusion.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nicla_sense/nicla_sense_fusion/: nicla_sense_fusion.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nicla_vision/nicla_vision_camera/: nicla_vision_camera.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nicla_vision/nicla_vision_fusion/: nicla_vision_fusion.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nicla_vision/nicla_vision_microphone/: nicla_vision_microphone.ino
src/lib/Gesture_ESP32S3_inferencing/examples/nicla_vision/nicla_vision_microphone_continuous/: nicla_vision_microphone_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/portenta_h7/portenta_h7_camera/: portenta_h7_camera.ino
src/lib/Gesture_ESP32S3_inferencing/examples/portenta_h7/portenta_h7_microphone/: portenta_h7_microphone.ino
src/lib/Gesture_ESP32S3_inferencing/examples/portenta_h7/portenta_h7_microphone_continuous/: portenta_h7_microphone_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/rp2040/rp2040_fusion/: rp2040_fusion.ino
src/lib/Gesture_ESP32S3_inferencing/examples/rp2040/rp2040_microphone/: rp2040_microphone.ino
src/lib/Gesture_ESP32S3_inferencing/examples/rp2040/rp2040_microphone_continuous/: rp2040_microphone_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/sony_spresense/sony_spresense_camera/: sony_spresense_camera.ino
src/lib/Gesture_ESP32S3_inferencing/examples/sony_spresense/sony_spresense_microphone/: sony_spresense_microphone.ino
src/lib/Gesture_ESP32S3_inferencing/examples/sony_spresense/sony_spresense_microphone_continuous/: sony_spresense_microphone_continuous.ino
src/lib/Gesture_ESP32S3_inferencing/examples/static_buffer/static_buffer/: static_buffer.ino
src/lib/Gesture_ESP32S3_inferencing/src/model-parameters/: model_metadata.h  model_variables.h
src/lib/Gesture_ESP32S3_inferencing/src/tflite-model/: tflite_learn_960438_3_compiled.cpp  tflite_learn_960438_3_compiled.h
src/lib/Voice_Model/: library.properties  rename.py
src/lib/Voice_Model/examples/esp32/esp32_camera/: esp32_camera.ino
src/lib/Voice_Model/examples/esp32/esp32_fusion/: esp32_fusion.ino
src/lib/Voice_Model/examples/esp32/esp32_microphone/: esp32_microphone.ino
src/lib/Voice_Model/examples/esp32/esp32_microphone_continuous/: esp32_microphone_continuous.ino
src/lib/Voice_Model/examples/nano_ble33_sense/nano_ble33_sense_accelerometer/: nano_ble33_sense_accelerometer.ino
src/lib/Voice_Model/examples/nano_ble33_sense/nano_ble33_sense_accelerometer_continuous/: nano_ble33_sense_accelerometer_continuous.ino
src/lib/Voice_Model/examples/nano_ble33_sense/nano_ble33_sense_camera/: nano_ble33_sense_camera.ino
src/lib/Voice_Model/examples/nano_ble33_sense/nano_ble33_sense_fusion/: nano_ble33_sense_fusion.ino
src/lib/Voice_Model/examples/nano_ble33_sense/nano_ble33_sense_microphone/: nano_ble33_sense_microphone.ino
src/lib/Voice_Model/examples/nano_ble33_sense/nano_ble33_sense_microphone_continuous/: nano_ble33_sense_microphone_continuous.ino
src/lib/Voice_Model/examples/nano_ble33_sense_rev2/nano_ble33_sense_rev2_accelerometer/: nano_ble33_sense_rev2_accelerometer.ino
src/lib/Voice_Model/examples/nano_ble33_sense_rev2/nano_ble33_sense_rev2_accelerometer_continuous/: nano_ble33_sense_rev2_accelerometer_continuous.ino
src/lib/Voice_Model/examples/nano_ble33_sense_rev2/nano_ble33_sense_rev2_fusion/: nano_ble33_sense_rev2_fusion.ino
src/lib/Voice_Model/examples/nicla_sense/nicla_sense_fusion/: nicla_sense_fusion.ino
src/lib/Voice_Model/examples/rp2040/rp2040_fusion/: rp2040_fusion.ino
src/lib/Voice_Model/src/: VoiceCommand_ESP32-S3_inferencing.h
src/lib/Voice_Model/src/voice-edge-impulse-sdk/cmake/zephyr/: CMakeLists.txt
src/lib/Voice_Model/src/voice-model-parameters/: model_metadata.h  model_variables.h
src/lib/Voice_Model/src/voice-tflite-model/: tflite_learn_964091_5_compiled.cpp  tflite_learn_964091_5_compiled.h  trained_model_ops_define.h
src/lib/edge_impulse_gesture/: README.txt
src/lib/edge_impulse_gesture/model-parameters/: model_metadata.h  model_variables.h
src/lib/edge_impulse_gesture/tflite-model/: tflite_learn_960438_3_compiled.cpp  tflite_learn_960438_3_compiled.h
src/src/: gesture.cpp  led_blinky.cpp  main.cpp  voice.cpp
(+1194 files in other folders)
